--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(OpenCV REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(Sophus REQUIRED)
 find_package(gtest REQUIRED)
+find_package(cgal REQUIRED)
 #set(CMAKE_BUILD_TYPE RELEASE)
 
 if (OPENMP_FOUND)
@@ -25,14 +26,33 @@ endif()
 include_directories(${EIGEN3_INCLUDE_DIR})
 include_directories(${Sophus_INCLUDE_DIRS})
 include_directories(/usr/local/include/)
+include(${CGAL_USE_FILE})
+link_directories(/usr/local/Cellar/cgal/4.14_1/lib)
 
-
-add_executable(main main.cc) 
-add_executable(test_main test_main.cc algorithm/delaunay_test.hpp algorithm/delaunay.cc algorithm/delaunay_test.hpp voronoi.hpp voronoi.cc voronoi_test.hpp geometry_algorithm.hpp geometry_algorithm_test.hpp)
+add_executable(main main.cc IO/las.cc IO/las.hpp)
+add_executable(test_main
+        test_main.cc
+        algorithm/delaunay_test.hpp
+        algorithm/delaunay.cc
+        algorithm/delaunay_test.hpp
+        voronoi.hpp
+        voronoi.cc
+        voronoi_test.hpp
+        geometry_algorithm.hpp
+        geometry_algorithm_test.hpp
+        kdtree_test.hpp
+        kdtree_test.hpp
+        utils/ThreadPool.cc
+        utils/ThreadPool.hpp
+        utils/thread_pool_unittest.hpp
+        algorithm/unconstrained_minization.cc
+        algorithm/unconstrained_minization.hpp
+        algorithm/unconstrained_minization_unittest.hpp
+        )
 
 target_link_libraries(main ${OpenCV_LIBS} Eigen3::Eigen)
 target_include_directories(test_main PUBLIC ${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR})
-target_link_libraries(test_main ${OpenCV_LIBS} Eigen3::Eigen ${GTEST_BOTH_LIBRARIES})
+target_link_libraries(test_main ${OpenCV_LIBS} Eigen3::Eigen ${GTEST_BOTH_LIBRARIES} ${CGAL_LIBS} )
 add_test(
         NAME test_main
         COMMAND test_main
