--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,10 +4,20 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+- dev
+
+strategy:
+    matrix:
+       linux:
+          imageName: "ubuntu-16.04"
+       mac:
+          imageName: "macos-10.13"
+       windows:
+          imageName: "vs2017-win2016"
+    maxParallel: 3
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: $(imageName)
 
 steps:
 - script: echo Hello, world!
