--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,4 +26,7 @@ steps:
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
+    ls
+    apt install -y cmake
+ 
   displayName: 'Run a multi-line script'
