--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,6 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
     ls
-    apt install -y cmake
+    sudo apt install -y cmake
  
   displayName: 'Run a multi-line script'
