--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,8 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
     ls
+    sudo apt update
+    sudo apt upgrade
     sudo apt install -y cmake libopencv-dev git
   condition: eq( variables['Agent.OS'], 'Linux') 
   displayName: 'Install Pre-Request in Linux'
@@ -64,7 +66,14 @@ steps:
  
 # macOS
 - bash: |
-     brew install cmake opencv eigen sophus googletest cgal
+     brew install cmake opencv eigen googletest cgal
+     git clone https://github.com/strasdat/Sophus.git
+     cd Sophus
+     mkdir build
+     cd build
+     cmake ..
+     make install
+     cd ../..
   condition: eq( variables['Agent.OS'], 'Darwin')
   displayName: 'Pre-request MacOS'
 
