--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,12 @@ if (CMAKE_COMPILER_ISGNUCXX)
     find_package(openmp)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 endif()
-#find_package(OpenCV REQUIRED)
-#find_package(Eigen3 REQUIRED)
-#find_package(Sophus REQUIRED)
-#find_package(gtest REQUIRED)
-#find_package(cgal REQUIRED)
-#set(CMAKE_BUILD_TYPE RELEASE)
+find_package(OpenCV REQUIRED)
+find_package(Eigen3 REQUIRED)
+find_package(Sophus REQUIRED)
+find_package(gtest REQUIRED)
+find_package(cgal REQUIRED)
+set(CMAKE_BUILD_TYPE RELEASE)
 
 if (OPENMP_FOUND)
     message(status "OPENMP FOUND")
@@ -28,18 +28,18 @@ include_directories(
 link_directories(
         ${PROJECT_SOURCE_DIR}/gtest_lib/lib
 )
-#include_directories(${EIGEN3_INCLUDE_DIR})
-#include_directories(${Sophus_INCLUDE_DIRS})
-#include_directories(/usr/local/include/)
-#include(${CGAL_USE_FILE})
-#link_directories(/usr/local/Cellar/cgal/4.14_1/lib)
+include_directories(${EIGEN3_INCLUDE_DIR})
+include_directories(${Sophus_INCLUDE_DIRS})
+include_directories(/usr/local/include/)
+include(${CGAL_USE_FILE})
+link_directories(/usr/local/Cellar/cgal/4.14_1/lib)
 
-#add_executable(main main.cc IO/las.cc IO/las.hpp)
+add_executable(main main.cc IO/las.cc IO/las.hpp)
 add_executable(test_main
         test_main.cc
         )
 
 
-#target_link_libraries(main ${OpenCV_LIBS} Eigen3::Eigen)
+target_link_libraries(main ${OpenCV_LIBS} Eigen3::Eigen ${BOOST_LIBRARIES})
 target_include_directories(test_main PUBLIC ${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR})
 target_link_libraries(test_main  gtest)
